--- a/sub_webdesign.html
+++ b/sub_webdesign.html
@@ -221,7 +221,7 @@
         <img src="images/cardnews_1_09.png" alt="카드뉴스1-공모전 공고" />
       </li>
       <li class="back-to-position to-bottom delay-8">
-        <img src="images/cardnews_1_10.png" alt="카드뉴스1-공모전 공고" />
+        <img src="images/cardnews_1_10.jpg" alt="카드뉴스1-공모전 공고" />
       </li>
     </ul>
   </section>
