--- a/sub_graphicdesign.html
+++ b/sub_graphicdesign.html
@@ -165,7 +165,7 @@
   <!-- MAIN SECTION -->
   <div id="main">
     <div class="contentswrap">
-      <img src="./images/graphic_1_01.png" alt="Graphic Design" class="floating" />
+      <img src="./images/graphic_1_01.png" alt="Graphic Design" class="floating hide" />
       <div class="title">
         <h1 class="logo">GRAPHIC DESIGN</h1>
         <h2>&#35;1 한국인터넷진흥원 교재 제작</h2>
@@ -199,7 +199,7 @@
   <!-- BROCHURE SECTION -->
   <section id="main_brochure" class="scroll-spy">
     <div class="contentswrap">
-      <img src="./images/brochure_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
+      <img src="./images/brochure_1_01.png" alt="GRAPHIC DESIGN" class="floating hide" />
       <div class="title back-to-position to-right delay-0">
         <h1 class="logo">GRAPHIC DESIGN</h1>
         <h2>&#35;2 브로슈어 디자인</h2>
@@ -239,7 +239,7 @@
   <!-- BOOK SECTION -->
   <section id="main_book" class="scroll-spy">
     <div class="contentswrap">
-      <img src="./images/book_1_01.png" alt="GRAPHIC DESIGN" class="floating" />
+      <img src="./images/book_1_01.png" alt="GRAPHIC DESIGN" class="floating hide" />
       <div class="title back-to-position to-right delay-0">
         <h1 class="logo">GRAPHIC DESIGN</h1>
         <h2>&#35;3 해설서 표지 디자인</h2>
@@ -259,10 +259,10 @@
   <section id="graphic_3" class="scroll-spy">
     <ul>
       <li class="back-to-position to-right delay-0">
-        <img src="images/book_1_02.png" alt="그래픽디자인3-해설서" />
+        <img src="images/book_1_02.png" class="book_1_02" alt="그래픽디자인3-해설서" />
       </li>
       <li class="back-to-position to-right delay-4">
-        <img src="images/book_1_01.png" alt="그래픽디자인3-해설서" />
+        <img src="images/book_1_01.png" class="book_1_01" alt="그래픽디자인3-해설서" />
       </li>
     </ul>
   </section>
