--- a/sub_digitaldrawing.html
+++ b/sub_digitaldrawing.html
@@ -184,10 +184,10 @@
   <section id="illust_1" class="scroll-spy">
     <ul>
       <li class="back-to-position to-bottom delay-0">
-        <img src="images/main_digital.png" class="digital_1_01" alt="디지털드로잉1-일러스트" />
+        <img src="images/main_digital.png" alt="디지털드로잉1-일러스트" />
       </li>
       <li class="back-to-position to-bottom delay-2">
-        <img src="images/digital_1_02.png" class="digital_1_02" alt="디지털드로잉1-일러스트" />
+        <img src="images/digital_1_02.png" alt="디지털드로잉1-일러스트" />
       </li>
     </ul>
   </section>
