Update Subpage Responsive

--- a/sub_designproject.html
+++ b/sub_designproject.html
@@ -165,7 +165,7 @@
   <!-- MAIN SECTION -->
   <div id="main">
     <div class="contentswrap">
-      <img src="./images/main_project.png" alt="Design Project" class="floating" />
+      <img src="./images/main_project.png" alt="Design Project" class="floating hide" />
       <div class="title">
         <h1 class="logo">DESIGN PROJECT</h1>
         <h2>팜팜발리 와인바 메뉴판 작업</h2>
