--- a/sub_digitaldrawing.html
+++ b/sub_digitaldrawing.html
@@ -165,7 +165,7 @@
   <!-- MAIN SECTION -->
   <div id="main">
     <div class="contentswrap">
-      <img src="./images/main_digital.png" alt="Digital Drawing" class="floating" />
+      <img src="./images/main_digital.png" alt="Digital Drawing" class="floating hide" />
       <div class="title">
         <h1 class="logo">DIGITAL DRAWING</h1>
         <h2>&#35;1 일러스트 작업</h2>
@@ -223,7 +223,7 @@
   <!-- CHARACTER SECTION -->
   <section id="main_character" class="scroll-spy">
     <div class="contentswrap">
-      <img src="./images/character_1_01.png" alt="Digital Drawing" class="floating" />
+      <img src="./images/character_1_01.png" alt="Digital Drawing" class="floating hide" />
       <div class="title back-to-position to-right delay-0">
         <h1 class="logo">DIGITAL DRAWING</h1>
         <h2>&#35;2 캐릭터 디자인</h2>
@@ -270,7 +270,7 @@
   <!-- DRAWING SECTION -->
   <section id="main_drawing" class="scroll-spy">
     <div class="contentswrap">
-      <img src="./images/drawing_2_01.png" alt="Digital Drawing" class="floating" />
+      <img src="./images/drawing_2_01.png" alt="Digital Drawing" class="floating hide" />
       <div class="title back-to-position to-right delay-0">
         <h1 class="logo">DIGITAL DRAWING</h1>
         <h2>&#35;3 디지털 드로잉</h2>
