--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             </h1>
             <div class="wrap_align">
               <div class="menu">
-                <h2 class="title">Design Works</h2>
+                <h2 class="title design_works">Design Works</h2>
                 <h3 class="subtitle">Graphic Design &amp; Digital Drawing</h3>
               </div>
               <ul class="artlist">
