--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                   <li>PHONE</li>
                   <li>010 3307 7591</li>
                   <li>E-MAIL</li>
-                  <li>jisunny302@naver.com</li>
+                  <li>wltjs31125@naver.com</li>
                 </ul>
               </div>
 
