--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <li class="answer_normal">010 3307 7591&nbsp;&nbsp;jisunny302&commat;naver.com</li>
                     <li class="answer_mobile">
                       010 3307 7591<br />
-                      jisunny302&commat;naver.com
+                      wltjs31125&commat;naver.com
                     </li>
                   </ul>
                 </div>
@@ -369,7 +369,7 @@
                   <li>PHONE</li>
                   <li>010 3307 7591</li>
                   <li>E-MAIL</li>
-                  <li>wltjs31125@naver.com</li>
+                  <li>wltjs31125&commat;naver.com</li>
                 </ul>
               </div>
 
