--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                       패스트캠퍼스 프론트엔드 과정 수료
                     </li>
                     <li>HTML &sdot; CSS &sdot; JavaScript &sdot; jQuery &sdot; Photoshop &sdot; Illust &sdot; Adobe XD &sdot; Lightroom &sdot; After Effects</li>
-                    <li class="answer_normal">010 3307 7591&nbsp;&nbsp;jisunny302&commat;naver.com</li>
+                    <li class="answer_normal">010 3307 7591&nbsp;&nbsp;wltjs31125&commat;naver.com</li>
                     <li class="answer_mobile">
                       010 3307 7591<br />
                       wltjs31125&commat;naver.com
