--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="wrap_align">
               <div class="menu">
                 <h2 class="title">About Me</h2>
-                <h3 class="subtitle">안녕하세요, 감각적인 디자이너 김지선입니다.</h3>
+                <h3 class="subtitle">안녕하세요, 감각적인 퍼블리셔 김지선입니다.</h3>
               </div>
               <div class="profile_wrap">
                 <div id="profile">
