--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
                   <ul class="answer">
                     <li>김지선</li>
                     <li>93&period; 11&period; 25</li>
-                    <li>WEB &amp; APP UI&sol;UX 웹디자인 과정 수료 <br />
+                    <li>WEB &amp; APP UI&sol;UX 웹디자인 과정 수료 <br />지
                       패스트캠퍼스 프론트엔드 과정 수료
                     </li>
                     <li>HTML &sdot; CSS &sdot; JavaScript &sdot; jQuery &sdot; Photoshop &sdot; Illust &sdot; Adobe XD &sdot; Lightroom &sdot; After Effects</li>
-                    <li class="answer_normal">010 3307 7591&nbsp;&nbsp;wltjs31125&commat;naver.com</li>
+                    <li class="answer_normal">010 3307 7591&nbsp;&nbsp;jisunny302&commat;naver.com</li>
                     <li class="answer_mobile">
                       010 3307 7591<br />
                       jisunny302&commat;naver.com
@@ -369,7 +369,7 @@
                   <li>PHONE</li>
                   <li>010 3307 7591</li>
                   <li>E-MAIL</li>
-                  <li>wltjs31125&commat;naver.com</li>
+                  <li>jisunny302&commat;naver.com</li>
                 </ul>
               </div>
 
