--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                   <ul class="answer">
                     <li>김지선</li>
                     <li>93&period; 11&period; 25</li>
-                    <li>WEB &amp; APP UI&sol;UX 웹디자인 과정 수료 <br />지
+                    <li>WEB &amp; APP UI&sol;UX 웹디자인 과정 수료 <br />
                       패스트캠퍼스 프론트엔드 과정 수료
                     </li>
                     <li>HTML &sdot; CSS &sdot; JavaScript &sdot; jQuery &sdot; Photoshop &sdot; Illust &sdot; Adobe XD &sdot; Lightroom &sdot; After Effects</li>
